-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.0, 6.5.1
-
None
-
Any platform that supports a Dark Theme
-
-
8a9e3c786 (dev), 0a236d924 (6.5)
Problem with QTextDocument.
If the user sets a "Dark Theme", then <hr> isn't visible because the current default rendering is in a "dark" colour (I think Black). When a Dark Theme is active this means the <hr> is invisible.
Instead it should be rendered by default in the colour returned by:
palette().color(QPalette::ColorRole::WindowText).name()
so it will be visible regardless of the chosen theme.
If of course the user sets a background-color in the style for the <hr> that should be used instead. I've worked round this by using (e.g.):
insertHtml("<hr style=\"background-color:" + palette().color(QPalette::ColorRole::WindowText).name() + "\">");
David
| For Gerrit Dashboard: QTBUG-113990 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 481190,3 | Default to WindowText color in QTextDocumentLayoutPrivate::drawBlock() | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 481604,2 | Default to WindowText color in QTextDocumentLayoutPrivate::drawBlock() | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |